[package]
name = "kata_bank_account"
version = "0.1.0"
edition = "2024"

[features]
domain1 = []
domain2 = ["domain1"]
domain3 = ["domain2"]
domain4 = ["domain3"]
infra1 = ["domain4"]
application1 = ["infra1"]
application2 = ["application1"]
application3 = ["application2"]
application4 = ["application3"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
axum = { version = "0.8.3", features = ["macros", "http2"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
axum-test = "18.1.0"
mockall = "0.13.1"
